>>added svg icon